Update backend configuration, enhance API functionality, and improve frontend components
- Added new environment variables for MCP integration in `env.template`.
- Updated `.gitignore` to exclude additional backend files.
- Enhanced `requirements.txt` with new dependencies for improved functionality.
- Removed obsolete migration file related to the season column.
- Improved error handling and logging in `api_football_client.py`.
- Added new endpoints for generating newsletters and managing loan flags in `api.py`.
- Introduced a universal date picker component in the frontend for better date selection.
- Updated various models to include new fields and relationships, ensuring data integrity.
- Refactored frontend components for better user experience and streamlined subscription management.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ coverage/
 *.swp
 *.swo
 # End Generation Here
+
+loan-army-backend/loan_candidates*
+loan-army-backend/loans.csv
+loan-army-backend/mu_upload_*.json
+loan-army-backend/newsletter_*.json
+loan-army-backend/report.json
+loan-army-backend/newsletter*
+.loan/
