--- a/loan-army-backend/env.template
+++ b/loan-army-backend/env.template
@@ -12,6 +12,18 @@ DB_NAME=loan_army_db
 # Generate using: python generate_api_key.py (DO NOT USE IN PRODUCTION)
 ADMIN_API_KEY=your_secure_admin_api_key_here
 
+# Brave Search (MCP) API key for enriched newsletter context
+# Official server runs via NPX stdio:
+#   npx -y @brave/brave-search-mcp-server --transport stdio
+# Requires Node 18+ (prefer 22+). Ensure BRAVE_API_KEY is set.
+BRAVE_API_KEY=your_brave_api_key_here
+
+# Debug/logging controls for MCP integration
+MCP_DEBUG=0
+MCP_LOG_SAMPLE_N=2
+MCP_STRICT_FRESHNESS=1
+MCP_ALLOW_WIDE_FRESHNESS=0
+
 # === API-FOOTBALL CONFIGURATION ===
 # API-Football key (optional for testing)
 API_FOOTBALL_KEY=your_api_football_key_here
