feat: Revamp deployment and email handling in backend and frontend
- Updated the deployment script to build and deploy the frontend to Azure Static Web App, removing the previous Dockerfile and nginx configuration.
- Enhanced backend email handling by integrating Mailgun and SMTP for email delivery, replacing the deprecated n8n webhook approach.
- Added new models for managing team subreddit mappings and tracking Reddit posts, facilitating better integration with Reddit.
- Implemented API endpoints for managing subreddit configurations and posting newsletters to Reddit, improving the admin interface for newsletter management.
- Introduced a toggle in the admin newsletters page to enable posting to Reddit during bulk publish operations.
- Improved logging and error handling across various components to enhance traceability and user experience.

--- a/loan-army-backend/env.template
+++ b/loan-army-backend/env.template
@@ -50,6 +50,8 @@ API_FOOTBALL_MODE=direct
 # Set to "true" to only process Manchester United (team ID 33)
 # Set to "false" or leave empty for normal operation
 TEST_ONLY_MANU=false
+# Email address for testing email delivery (used by test scripts)
+TEST_EMAIL=
 
 # === SECURITY (OPTIONAL) ===
 # Comma-separated list of IPs allowed to access admin endpoints
@@ -62,23 +64,32 @@ ADMIN_EMAILS=
 SECRET_KEY=your_flask_secret_key_here
 FLASK_ENV=development
 
-# === EMAIL DELIVERY (n8n webhook) ===
-# Webhook URL for n8n flow that sends emails via SMTP
-N8N_EMAIL_WEBHOOK_URL=
-# Optional bearer token for the webhook (leave blank if not used)
-N8N_EMAIL_AUTH_BEARER=
-# Optional HTTP method override: POST (default) or GET
-N8N_EMAIL_HTTP_METHOD=
-# If using GET, payload is nested under this query parameter
-N8N_EMAIL_GET_PARAM=
-# Optional name/address used in the email From header
+# === EMAIL DELIVERY (Direct via Mailgun + SMTP fallback) ===
+# Primary provider: Mailgun API
+# Get your API key from https://app.mailgun.com/settings/api_security
+MAILGUN_API_KEY=your-mailgun-api-key
+MAILGUN_DOMAIN=mg.yourdomain.com
+# Use https://api.eu.mailgun.net/v3 for EU region
+MAILGUN_API_URL=https://api.mailgun.net/v3
+
+# Fallback provider: SMTP (used if Mailgun fails)
+# These can also be your Mailgun SMTP credentials
+SMTP_HOST=smtp.mailgun.com
+SMTP_PORT=587
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_USE_TLS=true
+
+# Email sender defaults
 EMAIL_FROM_NAME=Go On Loan
 EMAIL_FROM_ADDRESS=no-reply@loan.army
 # Optional subject prefix, e.g. "[Go On Loan]"
 EMAIL_SUBJECT_PREFIX=
+
+# Newsletter settings
 # Optional: auto-send to subscribers when an admin marks a newsletter published
 NEWSLETTER_AUTO_SEND_ON_APPROVAL=1
-# Optional: public base URL (used by webhook to build manage/unsubscribe links)
+# Optional: public base URL (used to build manage/unsubscribe links)
 PUBLIC_BASE_URL=
 # Optional: explicit host for newsletter links (overrides other unsubscribe bases)
 NEWSLETTER_LINK_BASE_URL=
@@ -88,6 +99,22 @@ PUBLIC_UNSUBSCRIBE_BASE_URL=
 PUBLIC_API_BASE_URL=
 # Optional: customize the relative path used for manage preference links (defaults to /manage)
 PUBLIC_MANAGE_PATH=
+
+# Legacy n8n webhook support (deprecated, will be removed)
+# These are kept for backward compatibility during migration
+N8N_EMAIL_WEBHOOK_URL=
+N8N_EMAIL_AUTH_BEARER=
+
+# === REDDIT API CONFIGURATION ===
+# Reddit API credentials for posting newsletters to subreddits
+# Create an app at https://www.reddit.com/prefs/apps (choose "script" type)
+REDDIT_CLIENT_ID=your_reddit_client_id_here
+REDDIT_CLIENT_SECRET=your_reddit_client_secret_here
+# Reddit account credentials for the bot account (e.g., GoOnLoanBot)
+REDDIT_USERNAME=your_reddit_bot_username
+REDDIT_PASSWORD=your_reddit_bot_password
+# User agent string (format: AppName/Version by /u/YourUsername)
+REDDIT_USER_AGENT=GoOnLoan/1.0 by /u/GoOnLoanBot
 
 # === PRODUCTION NOTES ===
 # 1. In production, set these via your hosting platform's environment variables
