--- a/loan-army-backend/requirements.txt
+++ b/loan-army-backend/requirements.txt
@@ -8,6 +8,8 @@ certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
 Deprecated==1.2.18
 distro==1.9.0
 Flask==3.1.1
@@ -16,6 +18,7 @@ Flask-Limiter==3.9.2
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 flask-talisman==1.1.0
+fonttools==4.61.1
 greenlet==3.2.3
 griffe==1.10.0
 groq==0.32.0
@@ -31,17 +34,20 @@ Jinja2==3.1.6
 jiter==0.10.0
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
+kiwisolver==1.4.9
 limits==5.5.0
 Mako==1.3.10
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.8
 mcp==1.12.3
 mdurl==0.1.2
-Pillow==10.4.0
+numpy==2.4.0
 openai==1.109.1
 openai-agents==0.2.4
 ordered-set==4.1.0
 packaging==25.0
+pillow==11.3.0
 pluggy==1.6.0
 psycopg==3.2.9
 psycopg-binary==3.2.9
@@ -49,17 +55,21 @@ pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
+pyparsing==3.3.1
 pytest==8.4.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
 referencing==0.36.2
 requests==2.32.4
 rich==13.9.4
 rpds-py==0.26.0
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 sse-starlette==3.0.2
 starlette==0.47.2
+stripe==14.0.1
 tqdm==4.67.1
 types-requests==2.32.4.20250611
 typing-inspection==0.4.1
@@ -69,6 +79,3 @@ uvicorn==0.35.0
 webencodings==0.5.1
 Werkzeug==3.1.3
 wrapt==1.17.3
-matplotlib==3.8.2
-stripe==11.1.0
-praw>=7.7.1
