feat: Enhance writer and admin functionalities with new features and improvements
- Updated .gitignore to include playwright-report and settings.local.json.
- Revamped CONTINUITY.md to reflect new goals and decisions regarding writer support and team data synchronization.
- Added pagination and improved display for tracked and untracked teams in AdminTeams component.
- Enhanced player stats sorting in PlayerStatsDrawer for better data presentation.
- Introduced new utility functions in formatText.js for extracting and estimating reading time from newsletter content.
- Made various UI improvements across components for better user experience and accessibility.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ loan-army-backend/newsletter*
 .venv-test/
 loan-army-frontend/test-results
 playwright-report
+settings.local.json
+CONTINUITY*.md
